argo/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  hostnames:
    - argo.kroknes.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kroknes-gw
      namespace: default
      sectionName: web-gw-https
  rules:
    - backendRefs:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
